25. K8s/25.5 Network P2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: connector
  labels:
    component: bind
spec:
  selector:
    component: bind
  ports:
    - protocol: TCP
      name: nginx
      port: 9001
      targetPort: 80
    - protocol: TCP
      name: multitool
      port: 9002
      targetPort: 8080
