25. K8s/25.5 Network P2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: connector
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: connector
            port:
              number: 9002
